# Polis

./: .anchor-config.json  .gitignore  Anchor.toml  Cargo.toml  HANDOFF.md  README.md  STATUS.md  run_walkthrough.py  rust-toolchain.toml  verify_no_human.py
agent/: .env.example  README.md  REPAY_FLOW.md  code-hash.txt  code_hash.py  credit_manager.py  idls.py  llm_client.py  main.py  requirements.txt  server.py  solana_client.py  treasury_manager.py
design/: 2026-06-04-polis-spec.md
paper/: README.md  polis.aux  polis.md  polis.out  polis.tex
programs/credit/: Cargo.toml
programs/credit/src/: lib.rs
programs/identity/: Cargo.toml
programs/identity/src/: lib.rs
programs/reputation/: Cargo.toml
programs/reputation/src/: lib.rs
programs/wallet/: Cargo.toml
programs/wallet/src/: lib.rs
programs/x402/: Cargo.toml
programs/x402/src/: lib.rs
scripts/: README.md  _common.ts  allowed_human_signers.json  audit.ts  bootstrap.ts  demo-day.ts  fund-devnet.ts  package-lock.json  package.json  setup-localnet.sh  simulate-customers.ts  tsconfig.json
scripts/logs/: audit-report.md  walkthrough-results.json
scripts/logs/daily-snapshots/: 2026-06-15.json
