[workspace]
resolver = "2"
members = [
    "programs/identity",
    "programs/wallet",
    "programs/x402",
    "programs/credit",
    "programs/reputation",
]

# Tell host rustc about cfg flags the SBF toolchain + Anchor macros use,
# so they don't show up as `unexpected_cfgs` warnings during `cargo check`.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("anchor-debug","custom-heap","custom-panic","no-log-ix-name","solana"))',
] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
