[package]
name = "identity"
version = "0.1.0"
edition = "2021"
description = "polis Identity primitive — binds an autonomous agent's identity to its code_hash (not its wallet), backed by a slashable USDC stake bond."

[lib]
crate-type = ["cdylib", "lib"]
name = "identity"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
solana = []

[dependencies]
anchor-lang = "0.30"
anchor-spl = { version = "0.30", features = ["token", "associated_token"] }

[lints]
workspace = true
