[package]
name = "reputation"
version = "0.1.0"
edition = "2021"
description = "polis Reputation primitive — stake-bonded vouching with slashing. Reputation is identity-bound (PDA keyed by code_hash), market-priced (USDC stake), and slashable on default."

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
solana = []

[dependencies]
anchor-lang = { version = "0.30", features = ["init-if-needed"] }
anchor-spl = "0.30"

[lints]
workspace = true
